# clang-dead-code-optimization

./: .gitignore  CMakeLists.txt  README.md  build.sh
basic_optimized/: CMakeLists.txt  build.sh
function_sections/: CMakeLists.txt  build.sh
function_sections_optimized/: CMakeLists.txt  build.sh
header_only/: CMakeLists.txt  build.sh  main.c
header_only_optimized/: CMakeLists.txt  build.sh  lib.h
link_time_optimization/: CMakeLists.txt  build.sh
link_time_optimizations_optimized/: CMakeLists.txt  build.sh
